Button sizes + white-space overflow issue

--- a/modules/_header.sass
+++ b/modules/_header.sass
@@ -53,6 +53,7 @@ $toggle-width: 900px
 
           > a
             padding: 5px 15px
+            white-space: nowrap
 
     a.active
       background: $border
